--- a/layer.ipynb
+++ b/layer.ipynb
@@ -19,22 +19,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4.8, 1.21, 4.525]\n"
+      "[4.8, 1.21, 2.385]\n"
      ]
     }
    ],
    "source": [
+    "# 3 neurons with 4 inputs give 3 outputs\n",
     "output=[0,0,0]\n",
     "output[0]=inputs[0]*weights1[0]+ inputs[1]*weights1[1]+inputs[2]*weights1[2]+bias1+inputs[3]*weights1[3]\n",
     "output[1]=inputs[0]*weights2[0]+ inputs[1]*weights2[1]+inputs[2]*weights2[2]+bias2+inputs[3]*weights2[3]\n",
-    "output[2]=inputs[0]*weights3[0]+ inputs[1]*weights1[1]+inputs[2]*weights3[2]+bias3+inputs[3]*weights3[3]\n",
+    "output[2]=inputs[0]*weights3[0]+ inputs[1]*weights3[1]+inputs[2]*weights3[2]+bias3+inputs[3]*weights3[3]\n",
     "\n",
     "\n",
     "print(output)"
