--- a/neuron.ipynb
+++ b/neuron.ipynb
@@ -26,24 +26,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 1 neuron with 3 inputs gives single output\n",
     "output=inputs[0]*weights[0]+inputs[1]*weights[1]+inputs[2]*weights[2]+bias\n",
     "print(output)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "35.7\n"
-     ]
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
